--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +21,9 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
+    "morgan": "^1.10.0",
     "dotenv": "^8.2.0",
+    "nodemon": "^2.0.6",
     "express": "^4.17.1",
     "mongoose": "^5.11.13"
   }
