--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "dependencies": {
     "body-parse": "^0.1.0",
     "cors": "^2.8.5",
-    "morgan": "^1.10.0",
+    "cron-job-manager": "^2.1.4",
+    "crontab": "^1.4.2",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.6",
     "express": "^4.17.1",
-    "mongoose": "^5.11.13"
+    "mongodb-cron": "^1.7.1",
+    "mongoose": "^5.11.13",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6"
   }
 }
